--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "yeoman-generator": "~0.16.0",
     "chalk": "~0.4.0",
     "lodash": "^2.4.1",
-    "mixpanel": "0.0.19"
+    "mixpanel": "0.0.19",
+    "bower": "^1.3.2"
   },
   "devDependencies": {
     "mocha": "*"
